# xponance_research

./: .env.example  .gitignore  AGENTS.md  README.md  SETUP.md  architecture.md  journal.md  litearture.md  pyproject.toml  requirements.txt  work.md
.agents/roles/: coordinator.md  corpus-auditor.md  implementation-planner.md  index-methodology-designer.md  literature-reviewer.md  manager-exposure-analyst.md  memo-writer.md  portfolio-construction-analyst.md
.agents/templates/: active-manager-calibration-plan.md  corpus-gate-report.md  evidence-appendix-outline.md  factset-implementation-spec.md  index-rulebook-outline.md  manager-memo-outline.md  paper-extraction-sheet.md  question-map.md  rank-vs-two-step-test-plan.md
codex/: llamacloud_mcp_config.toml
docs/: literature_to_help_me.md  neo4j_graphrag_setup.md
llamacloud_rag/: __init__.py  bootstrap.py  config.py  corpus.py  corpus_gate.py  graph_backend.py  graph_bootstrap.py  graph_schema.py  mcp_server.py
referenes/: aapryl_factor_index_project_synthesis.md  fidelity_global_quality_value_methodology.md  fidelity_important_formulas.md  ftse_global_factor_ground_rules.md  ftse_quality_methodology.md  important_formulas.md  morningstar_global_factor_rulebook.md  morningstar_important_formulas.md  msci_important_formulas.md  msci_quality_methodology.md
scripts/: run_research_mcp.py  sync_neo4j_graph.py
tests/: test_corpus_pipeline.py
